# algorithms-datastructure

./: CMakeLists.txt
include/: double_linkedlist.h  linkedlist.h  utils.h
src/: double_linkedlist.c  linkedlist.c  main.c
